--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>WebStudio</title>
 </head>
 <body>
-    
+    <header>    
+        <nav>
+            <ul>
+                <li><a href="" lang="en">WebStudio</a></li>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <main>
+        <section>
+
+        </section>
+    </main>
 </body>
 </html>
