--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <header>    
+    <header>
         <nav>
             <ul>
                 <li><a href="" lang="en">WebStudio</a></li>
@@ -22,9 +22,57 @@
         </ul>
     </header>
     <main>
+        <!-- Section-1 -->
         <section>
-
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <!-- Section-2 -->
+        <section>
+            <ul>
+                <li>Внимание к деталям</li>
+                <li>Пунктуальность</li>
+                <li>Планирование</li>
+                <li>Современные технологии</li>
+            </ul>
+            <ul>
+                <li>Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
+                <li>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
+                <li>Равным образом консультация с широким активом в значительной степени обуславливает.</li>
+                <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
+            </ul>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/what-we-do-img-1.jpg" alt="Печатает на клавиатуре" width="370"></li>
+                <li><img src="./images/what-we-do-img-2.jpg" alt="Телефон и ноутбук" width="370"></li>
+                <li><img src="./images/what-we-do-img-3.jpg" alt="Изображение на планшете" width="370"></li>
+            </ul>
+        </section>
+        <!-- Section-3 -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><img src="./images/our-team-img-1.jpg" alt="Фото-1" width="270"></li>
+                <li><img src="./images/our-team-img-2.jpg" alt="Фото-2" width="270"></li>
+                <li><img src="./images/our-team-img-3.jpg" alt="Фото-3" width="270"></li>
+                <li><img src="./images/our-team-img-4.jpg" alt="Фото-4" width="270"></li>
+            </ul>
+            <ul>
+                <li>Игорь Демьяненко</li>
+                <li>Ольга Репина</li>
+                <li>Николай Тарасов</li>
+                <li>Михаил Ермаков</li>
+            </ul>
+            <ul>
+                <li lang="en">Product Designer</li>
+                <li lang="en">Frontend Developer</li>
+                <li lang="en">Marketing</li>
+                <li lang="en">UI Designer</li>
+            </ul>
         </section>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
