--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
         </section>
     </main>
     <footer>
-        
+        <a href="" lang="en">WebStudio</a>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
     </footer>
 </body>
 </html>
