--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </main>
     <footer>
         <a href="" lang="en">WebStudio</a>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
             <li><a href="mailto:info@example.com">info@example.com</a></li>
             <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
