--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
     </main>
     <footer>
         <a href="" lang="en">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
+        <address>г. Киев, пр-т Леси Украинки, 26
+            <ul>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
     </footer>
 </body>
 </html>
