--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="" lang="en">WebStudio</a></li>
+                <li><a href="" lang="en"><span>Web</span>Studio</a></li>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -52,27 +52,31 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./images/our-team-img-1.jpg" alt="Фото-1" width="270"></li>
-                <li><img src="./images/our-team-img-2.jpg" alt="Фото-2" width="270"></li>
-                <li><img src="./images/our-team-img-3.jpg" alt="Фото-3" width="270"></li>
-                <li><img src="./images/our-team-img-4.jpg" alt="Фото-4" width="270"></li>
-            </ul>
-            <ul>
-                <li>Игорь Демьяненко</li>
-                <li>Ольга Репина</li>
-                <li>Николай Тарасов</li>
-                <li>Михаил Ермаков</li>
-            </ul>
-            <ul>
-                <li lang="en">Product Designer</li>
-                <li lang="en">Frontend Developer</li>
-                <li lang="en">Marketing</li>
-                <li lang="en">UI Designer</li>
+                <li>
+                    <img src="./images/our-team-img-1.jpg" alt="Фото-1" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/our-team-img-2.jpg" alt="Фото-2" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/our-team-img-3.jpg" alt="Фото-3" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/our-team-img-4.jpg" alt="Фото-4" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="" lang="en">WebStudio</a>
+        <a href="" lang="en"><span>Web</span>Studio</a>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p> 
             <ul>
