--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav>
+            <a href="" lang="en"><span>Web</span>Studio</a>
             <ul>
-                <li><a href="" lang="en"><span>Web</span>Studio</a></li>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -47,6 +47,9 @@
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+        </section>
+        <!-- Section-3 -->
+        <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/what-we-do-img-1.jpg" alt="Печатает на клавиатуре" width="370"></li>
@@ -54,7 +57,7 @@
                 <li><img src="./images/what-we-do-img-3.jpg" alt="Изображение на планшете" width="370"></li>
             </ul>
         </section>
-        <!-- Section-3 -->
+        <!-- Section-4 -->
         <section>
             <h2>Наша команда</h2>
             <ul>
